<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alas"/>

    <EditText
        android:id="@+id/alas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"/>

    <EditText
        android:id="@+id/tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/segitiga"/>
    <Button
        android:id="@+id/showpersegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/persegi"/>
    <Button
        android:id="@+id/showlingkaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lingkaran"/>


    <TextView
        android:id="@+id/txtHasilLuas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtHasilKeliling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>